apps/unifi/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-mongodb
  namespace: unifi
spec:
  selector:
    app: unifi-mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  clusterIP: None
