apps/unifi/unifi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  namespace: unifi
  annotations:
    cloudprovider.harvesterhci.io/ipam: pool
    cloudprovider.harvesterhci.io/ippool: mgmt-pool

    loadbalancer.harvesterhci.io/cluster: homelab
    loadbalancer.harvesterhci.io/namespace: default
    loadbalancer.harvesterhci.io/network: default/infra-mgmt
    loadbalancer.harvesterhci.io/ipam: pool
    loadbalancer.harvesterhci.io/ippool: mgmt-pool
spec:
  selector:
    app: unifi-controller
  type: LoadBalancer
  loadBalancerIP: "10.10.50.50"
  ports:
    - name: web-admin
      port: 8443
      targetPort: 8443
      protocol: TCP
    - name: inform
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: stun
      port: 3478
      targetPort: 3478
      protocol: UDP
    - name: discovery
      port: 10001
      targetPort: 10001
      protocol: UDP
    - name: l2-discovery
      port: 1900
      targetPort: 1900
      protocol: UDP
    - name: guest-https
      port: 8843
      targetPort: 8843
      protocol: TCP
    - name: guest-http
      port: 8880
      targetPort: 8880
      protocol: TCP
    - name: speedtest
      port: 6789
      targetPort: 6789
      protocol: TCP
